Fixed alignment issue in Navbar on Mobile Added `no-pad` class -> removes padding. Created hover effect for `a` in navbar. Also stopped text from changing to black. Created `no-hover` for `a` that won't have hover effects. TODO: Hover effects for rest of site.

--- a/src/assets/style/mixin.less
+++ b/src/assets/style/mixin.less
@@ -10,3 +10,6 @@
 .shadow() {
 	box-shadow: 0px 4px 4px rgba(66, 50, 131, 0.25);
 }
+
+@alert-color: #F130AF;
+@notification-color: #8530f1;
